gitops/netalertx/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netalertx
  labels:
    # Allow netalertx to use hostnetwork for ARP-Scanning
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/version: latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netalertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netalertx
  template:
    metadata:
      labels:
        app: netalertx
    spec:
      containers:
      - name: netalertx
        image: ghcr.io/jokob-sk/netalertx:26.9
        ports:
        - name: http
          containerPort: 20211
        - name: graphql
          containerPort: 20212
        command:
        - bash
        - /config/my_entrypoint.sh
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_ADMIN
            - NET_RAW
            - NET_BIND_SERVICE
          runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
        startupProbe:
          exec:
            command:
            - bash
            - /import/import.sh
          initialDelaySeconds: 1
        livenessProbe:
          httpGet:
            path: /graphql
            port: graphql
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /graphql
            port: graphql
          initialDelaySeconds: 5
        volumeMounts:
        - name: netalertx-config
          mountPath: /config
        - name: netalertx-devices
          mountPath: /import
        - name: netalertx-data
          mountPath: /data
        - name: netalertx-tmp
          mountPath: /tmp
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          # limits:
          #   memory: 132Mi
      securityContext:
        runAsUser: 20211
        runAsGroup: 20211
        runAsNonRoot: true
        fsGroup: 20211
      hostNetwork: true
      volumes:
        - name: netalertx-data
          persistentVolumeClaim:
            claimName: netalertx-pvc
        - name: netalertx-tmp
          emptyDir: {}
        - name: netalertx-config
          configMap:
            name: netalertx-app-conf
            defaultMode: 0666
        - name: netalertx-devices
          secret:
            secretName: netalertx-devices
            defaultMode: 0666

---
apiVersion: v1
kind: Service
metadata:
  name: netalertx
spec:
  selector:
    app: netalertx
  ports:
  - name: http
    port: 20211
    targetPort: http
  - name: graphql
    port: 20212
    targetPort: graphql
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - network.buc.sh
    secretName: cert-network-buc-sh
  rules:
  - host: network.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netalertx
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx-http
spec:
  rules:
    - host: network.10.0.0.16.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netalertx
                port:
                  name: http
